fixing youtube card spacing

--- a/src/spa/shared/cards/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
+++ b/src/spa/shared/cards/youtubeCard/youtubeCardDescription/youtubeCardDescription.module.less
@@ -3,7 +3,7 @@
 .channelDiv {
   align-items: center;
   display: flex;
-  margin: @cardInnerMargin 0;
+  margin-bottom: @cardInnerMargin;
 }
 
 .channelIcon {
@@ -13,6 +13,13 @@
 
 .channelTitle {
   margin-left: 0.25rem;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .statsContainer {
